# pfe_GtwoML

./: .gitignore  CMakeLists.txt  README.md
BTIDG2/exemples/: BTIG2_adjacency.c  CMakeLists.txt
PageRank/: CMakeLists.txt  README.md  hardbrain.h  pagerank_includes.h
PageRank/OnA/: PR_DistributedRV_HardBrain.c  PR_DistributedRV_HardBrain_OpenMP.c  README.md
PageRank/OnA/OldVersions/: PR_EffMVMul_HardBrain.c
PageRank/OnTransposedA/: PR_DistributedRV_HardBrain.c
PageRank/OnTransposedA/AnyNumberOfCores/: PR_adjusted_core_usage.c
PageRank/OnTransposedA/OldVersions/: PageRankParallele.c  PageRankParallele_RowBlocksOnly.c
PageRank/OnTransposedA/Test/: TestPageRank.c  TestPerfRedistributionBroadcast.c
PageRank/OnTransposedA/Test/FugakuJobscripts/: 256N.sh  sub.sh
PageRank/OnTransposedA/Test/TestCompletePageRank/: TestPageRank.c
PageRank/OnTransposedA/Test/TestCompletePageRank/brain0.035/: hardbrain.h
PageRank/OnTransposedA/Test/TestCompletePageRank/brain0.35/: 16N.sh  16N_NoTorus.sh  1N.sh  4N.sh  (+6 more)
PageRank/Parallele/: DemoCerveau.c  PageRankParallele.c  PageRankParallele_GenV4.c  PageRankParallele_HardBrain.c  hardbrain.h
PageRank/Parallele/AnyNumberOfCores/: PR_adjusted_core_usage.c  PR_nb_ligne_local.c  README.md
PageRank/Parallele/EfficientMatrixVectorMul/: PageRankParallele_EffMVMul_HardBrain.c
PageRank/Parallele/OnA/: DistributedResultVectorTest.c  PageRankParallele_DistributedRV_HardBrain.c  PageRankParallele_DistributedRV_HardBrain_OpenMP.c  PageRankParallele_EffMVMul_DistributedResult_HardBrain.c  PageRankParallele_EffMVMul_HardBrain.c  PageRankParallele_OnNormalizedA_HardBrain.c  TestReduce.c  pagerank_includes.h
PageRank/Parallele/OnA/OldVersions/: PageRankParallele_OnNormalizedA_HardBrain.c
PageRank/Parallele/OnTransposedNormalizedA/: PageRankParallele_HardBrain.c  PageRankParallele_HardBrain_DistributedRV.c  PageRankParallele_RowBlocksOnly.c  pagerank_includes.h
PageRank/Parallele/OnTransposedNormalizedA/AnyNumberOfCores/: PR_nb_ligne_local.c
PageRank/Parallele/OnTransposedNormalizedA/Test/: TestPerfMatrixVectorProductAllreduce.c  TestPerfRedistributionBroadcast.c
PageRank/Sequentiel/: PageRankSequential  PageRankSequential.c
PageRank/includes/: pagerank.h
PageRank/jobscripts_fugaku/: README.md  mv.sh  sub.sh
PageRank/jobscripts_fugaku/mpi_cmg/random_stoch/: 1024N.sh  1024N_NoTorus.sh  16N.sh  16N_NoTorus.sh  1N.sh  1N_NoTorus.sh  256N.sh  256N_NoTorus.sh  4N.sh  4N_NoTorus.sh  64N.sh  64N_NoTorus.sh
PageRank/jobscripts_fugaku/mpi_node/cqmat/: 1024N.sh  1024N_NoTorus.sh  16N.sh  16N_NoTorus.sh  1N.sh  1N_NoTorus.sh  256N.sh  256N_NoTorus.sh  4N.sh  4N_NoTorus.sh  64N.sh  64N_NoTorus.sh
PageRank/jobscripts_fugaku/mpi_node/random_stoch/: 1024N.sh  1024N_NoTorus.sh  16N.sh  16N_NoTorus.sh  1N.sh  1N_NoTorus.sh  256N.sh  256N_NoTorus.sh  4096N.sh  4096N_NoTorus.sh  4N.sh  4N_NoTorus.sh  64N.sh  64N_NoTorus.sh
(+111 files in other folders)
